// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Plugins > comments 1`] = `
[
  {
    "fills": [
      {
        "fillColor": "#FFFFFF",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "1",
    "height": 0.01,
    "hideFillOnExport": false,
    "id": "1",
    "name": "Root Frame",
    "parentId": "1",
    "points": [
      {
        "x": 0,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0.01,
      },
      {
        "x": 0,
        "y": 0.01,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "selrect": {
      "height": 0.01,
      "width": 0.01,
      "x": 0,
      "x1": 0,
      "x2": 0.01,
      "y": 0,
      "y1": 0,
      "y2": 0.01,
    },
    "shapes": [],
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "frame",
    "width": 0.01,
    "x": 0,
    "y": 0,
  },
]
`;

exports[`Plugins > component library 1`] = `
[
  {
    "fills": [
      {
        "fillColor": "#FFFFFF",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "1",
    "height": 0.01,
    "hideFillOnExport": false,
    "id": "1",
    "name": "Root Frame",
    "parentId": "1",
    "points": [
      {
        "x": 0,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0.01,
      },
      {
        "x": 0,
        "y": 0.01,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "selrect": {
      "height": 0.01,
      "width": 0.01,
      "x": 0,
      "x1": 0,
      "x2": 0.01,
      "y": 0,
      "y1": 0,
      "y2": 0.01,
    },
    "shapes": [
      "2",
    ],
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "frame",
    "width": 0.01,
    "x": 0,
    "y": 0,
  },
  {
    "fills": [
      {
        "fillColor": "#B1B2B5",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "1",
    "height": 100,
    "id": "2",
    "name": "Rectangle",
    "parentId": "1",
    "points": [
      {
        "x": 684,
        "y": 540,
      },
      {
        "x": 784,
        "y": 540,
      },
      {
        "x": 784,
        "y": 640,
      },
      {
        "x": 684,
        "y": 640,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "rx": 0,
    "ry": 0,
    "selrect": {
      "height": 100,
      "width": 100,
      "x": 684,
      "x1": 684,
      "x2": 784,
      "y": 540,
      "y1": 540,
      "y2": 640,
    },
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "rect",
    "width": 100,
    "x": 684,
    "y": 540,
  },
]
`;

exports[`Plugins > create board - text - rectable 1`] = `
[
  {
    "fills": [
      {
        "fillColor": "#FFFFFF",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "1",
    "height": 0.01,
    "hideFillOnExport": false,
    "id": "1",
    "name": "Root Frame",
    "parentId": "1",
    "points": [
      {
        "x": 0,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0.01,
      },
      {
        "x": 0,
        "y": 0.01,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "selrect": {
      "height": 0.01,
      "width": 0.01,
      "x": 0,
      "x1": 0,
      "x2": 0.01,
      "y": 0,
      "y1": 0,
      "y2": 0.01,
    },
    "shapes": [
      "2",
      "4",
      "5",
    ],
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "frame",
    "width": 0.01,
    "x": 0,
    "y": 0,
  },
  {
    "fills": [
      {
        "fillColor": "#FFFFFF",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "1",
    "height": 300,
    "hideFillOnExport": false,
    "id": "2",
    "name": "Board name",
    "parentId": "1",
    "points": [
      {
        "x": 684,
        "y": 540,
      },
      {
        "x": 984,
        "y": 540,
      },
      {
        "x": 984,
        "y": 840,
      },
      {
        "x": 684,
        "y": 840,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "rx": 8,
    "ry": 8,
    "selrect": {
      "height": 300,
      "width": 300,
      "x": 684,
      "x1": 684,
      "x2": 984,
      "y": 540,
      "y1": 540,
      "y2": 840,
    },
    "shapes": [
      "3",
    ],
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "frame",
    "width": 300,
    "x": 684,
    "y": 540,
  },
  {
    "constraintsH": "left",
    "constraintsV": "top",
    "content": {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "fills": [
                    {
                      "fillColor": "#000000",
                      "fillOpacity": 1,
                    },
                  ],
                  "fontFamily": "sourcesanspro",
                  "fontId": "sourcesanspro",
                  "fontSize": "14",
                  "fontStyle": "normal",
                  "fontVariantId": "regular",
                  "fontWeight": "400",
                  "letterSpacing": "0",
                  "lineHeight": "1.2",
                  "text": "Hello from board",
                  "textAlign": "left",
                  "textDecoration": "none",
                  "textTransform": "none",
                  "typographyRefFile": null,
                  "typographyRefId": null,
                },
              ],
              "fills": [
                {
                  "fillColor": "#000000",
                  "fillOpacity": 1,
                },
              ],
              "fontFamily": "sourcesanspro",
              "fontId": "sourcesanspro",
              "fontSize": "14",
              "fontStyle": "normal",
              "fontVariantId": "regular",
              "fontWeight": "400",
              "letterSpacing": "0",
              "lineHeight": "1.2",
              "textAlign": "left",
              "textDecoration": "none",
              "textTransform": "none",
              "type": "paragraph",
              "typographyRefFile": null,
              "typographyRefId": null,
            },
          ],
          "type": "paragraph-set",
        },
      ],
      "type": "root",
    },
    "flipX": null,
    "flipY": null,
    "frameId": "2",
    "growType": "auto-width",
    "height": 17,
    "id": "3",
    "name": "Text",
    "parentId": "2",
    "points": [
      {
        "x": 10,
        "y": 10,
      },
      {
        "x": 110,
        "y": 10,
      },
      {
        "x": 110,
        "y": 27,
      },
      {
        "x": 10,
        "y": 27,
      },
    ],
    "positionData": [
      {
        "direction": "ltr",
        "fills": [
          {
            "fillColor": "#000000",
            "fillOpacity": 1,
          },
        ],
        "fontFamily": "sourcesanspro",
        "fontSize": "14px",
        "fontStyle": "normal",
        "fontWeight": "400",
        "height": 18,
        "letterSpacing": "normal",
        "text": "Hello from board",
        "textDecoration": "none solid rgb(0, 0, 0)",
        "textTransform": "none",
        "width": 99.234375,
        "x": 10,
        "x1": 0,
        "x2": 99.234375,
        "y": 27,
        "y1": -1,
        "y2": 17,
      },
    ],
    "rotation": 0,
    "selrect": {
      "height": 17,
      "width": 100,
      "x": 10,
      "x1": 10,
      "x2": 110,
      "y": 10,
      "y1": 10,
      "y2": 27,
    },
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "text",
    "width": 100,
    "x": 10,
    "y": 10,
  },
  {
    "fills": [
      {
        "fillColor": "#B1B2B5",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "1",
    "height": 200,
    "id": "4",
    "name": "Rectangle",
    "parentId": "1",
    "pluginData": {
      "TEST": {
        "customKey": "customValue",
      },
    },
    "points": [
      {
        "x": 684,
        "y": 540,
      },
      {
        "x": 884,
        "y": 540,
      },
      {
        "x": 884,
        "y": 740,
      },
      {
        "x": 684,
        "y": 740,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "rx": 0,
    "ry": 0,
    "selrect": {
      "height": 200,
      "width": 200,
      "x": 684,
      "x1": 684,
      "x2": 884,
      "y": 540,
      "y1": 540,
      "y2": 740,
    },
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "rect",
    "width": 200,
    "x": 684,
    "y": 540,
  },
  {
    "content": {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "fills": [
                    {
                      "fillColor": "#000000",
                      "fillOpacity": 1,
                    },
                  ],
                  "fontFamily": "sourcesanspro",
                  "fontId": "sourcesanspro",
                  "fontSize": "14",
                  "fontStyle": "normal",
                  "fontVariantId": "regular",
                  "fontWeight": "400",
                  "letterSpacing": "0",
                  "lineHeight": "1.2",
                  "text": "Hello from plugin",
                  "textAlign": "left",
                  "textDecoration": "none",
                  "textTransform": "none",
                  "typographyRefFile": null,
                  "typographyRefId": null,
                },
              ],
              "fills": [
                {
                  "fillColor": "#000000",
                  "fillOpacity": 1,
                },
              ],
              "fontFamily": "sourcesanspro",
              "fontId": "sourcesanspro",
              "fontSize": "14",
              "fontStyle": "normal",
              "fontVariantId": "regular",
              "fontWeight": "400",
              "letterSpacing": "0",
              "lineHeight": "1.2",
              "textAlign": "left",
              "textDecoration": "none",
              "textTransform": "none",
              "type": "paragraph",
              "typographyRefFile": null,
              "typographyRefId": null,
            },
          ],
          "type": "paragraph-set",
        },
      ],
      "type": "root",
    },
    "flipX": null,
    "flipY": null,
    "frameId": "1",
    "growType": "auto-width",
    "height": 17,
    "id": "5",
    "name": "Text",
    "parentId": "1",
    "points": [
      {
        "x": 684,
        "y": 540,
      },
      {
        "x": 786,
        "y": 540,
      },
      {
        "x": 786,
        "y": 557,
      },
      {
        "x": 684,
        "y": 557,
      },
    ],
    "positionData": [
      {
        "direction": "ltr",
        "fills": [
          {
            "fillColor": "#000000",
            "fillOpacity": 1,
          },
        ],
        "fontFamily": "sourcesanspro",
        "fontSize": "14px",
        "fontStyle": "normal",
        "fontWeight": "400",
        "height": 18,
        "letterSpacing": "normal",
        "text": "Hello from plugin",
        "textDecoration": "none solid rgb(0, 0, 0)",
        "textTransform": "none",
        "width": 101.53125,
        "x": 684,
        "x1": 0,
        "x2": 101.53125,
        "y": 557,
        "y1": -1,
        "y2": 17,
      },
    ],
    "rotation": 0,
    "selrect": {
      "height": 17,
      "width": 102,
      "x": 684,
      "x1": 684,
      "x2": 786,
      "y": 540,
      "y1": 540,
      "y2": 557,
    },
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "text",
    "width": 102,
    "x": 684,
    "y": 540,
  },
]
`;

exports[`Plugins > create flex layout 1`] = `
[
  {
    "fills": [
      {
        "fillColor": "#FFFFFF",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "1",
    "height": 0.01,
    "hideFillOnExport": false,
    "id": "1",
    "name": "Root Frame",
    "parentId": "1",
    "points": [
      {
        "x": 0,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0.01,
      },
      {
        "x": 0,
        "y": 0.01,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "selrect": {
      "height": 0.01,
      "width": 0.01,
      "x": 0,
      "x1": 0,
      "x2": 0.01,
      "y": 0,
      "y1": 0,
      "y2": 0.01,
    },
    "shapes": [
      "2",
    ],
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "frame",
    "width": 0.01,
    "x": 0,
    "y": 0,
  },
  {
    "fills": [
      {
        "fillColor": "#FFFFFF",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "1",
    "height": 110,
    "hideFillOnExport": false,
    "id": "2",
    "layout": "flex",
    "layoutAlignContent": "stretch",
    "layoutAlignItems": "center",
    "layoutFlexDir": "row",
    "layoutGap": {
      "columnGap": 0,
      "rowGap": 0,
    },
    "layoutGapType": "multiple",
    "layoutGridDir": "column",
    "layoutItemHSizing": "auto",
    "layoutItemVSizing": "auto",
    "layoutJustifyContent": "center",
    "layoutPadding": {
      "p1": 5,
      "p2": 5,
      "p3": 5,
      "p4": 5,
    },
    "layoutPaddingType": "simple",
    "layoutWrapType": "nowrap",
    "name": "Board",
    "parentId": "1",
    "points": [
      {
        "x": 684,
        "y": 540,
      },
      {
        "x": 894,
        "y": 540,
      },
      {
        "x": 894,
        "y": 650,
      },
      {
        "x": 684,
        "y": 650,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "selrect": {
      "height": 110,
      "width": 210,
      "x": 684,
      "x1": 684,
      "x2": 894,
      "y": 540,
      "y1": 540,
      "y2": 650,
    },
    "shapes": [
      "4",
      "3",
    ],
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "frame",
    "width": 210,
    "x": 684,
    "y": 540,
  },
  {
    "constraintsH": "left",
    "constraintsV": "top",
    "fills": [
      {
        "fillColor": "#B1B2B5",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "2",
    "height": 100,
    "id": "3",
    "name": "Rectangle",
    "parentId": "2",
    "points": [
      {
        "x": 689,
        "y": 545,
      },
      {
        "x": 789,
        "y": 545,
      },
      {
        "x": 789,
        "y": 645,
      },
      {
        "x": 689,
        "y": 645,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "rx": 0,
    "ry": 0,
    "selrect": {
      "height": 100,
      "width": 100,
      "x": 689,
      "x1": 689,
      "x2": 789,
      "y": 545,
      "y1": 545,
      "y2": 645,
    },
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "rect",
    "width": 100,
    "x": 689,
    "y": 545,
  },
  {
    "constraintsH": "left",
    "constraintsV": "top",
    "fills": [
      {
        "fillColor": "#B1B2B5",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "2",
    "height": 100,
    "id": "4",
    "name": "Ellipse",
    "parentId": "2",
    "points": [
      {
        "x": 789,
        "y": 545,
      },
      {
        "x": 889,
        "y": 545,
      },
      {
        "x": 889,
        "y": 645,
      },
      {
        "x": 789,
        "y": 645,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "selrect": {
      "height": 100,
      "width": 100,
      "x": 789,
      "x1": 789,
      "x2": 889,
      "y": 545,
      "y1": 545,
      "y2": 645,
    },
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "circle",
    "width": 100,
    "x": 789,
    "y": 545,
  },
]
`;

exports[`Plugins > create grid layout 1`] = `
[
  {
    "fills": [
      {
        "fillColor": "#FFFFFF",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "1",
    "height": 0.01,
    "hideFillOnExport": false,
    "id": "1",
    "name": "Root Frame",
    "parentId": "1",
    "points": [
      {
        "x": 0,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0.01,
      },
      {
        "x": 0,
        "y": 0.01,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "selrect": {
      "height": 0.01,
      "width": 0.01,
      "x": 0,
      "x1": 0,
      "x2": 0.01,
      "y": 0,
      "y1": 0,
      "y2": 0.01,
    },
    "shapes": [
      "2",
    ],
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "frame",
    "width": 0.01,
    "x": 0,
    "y": 0,
  },
  {
    "fills": [
      {
        "fillColor": "#FFFFFF",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "1",
    "height": 100,
    "hideFillOnExport": false,
    "id": "2",
    "layout": "grid",
    "layoutAlignContent": "stretch",
    "layoutAlignItems": "center",
    "layoutGap": {
      "columnGap": 10,
      "rowGap": 10,
    },
    "layoutGapType": "multiple",
    "layoutGridCells": [
      {
        "alignSelf": "auto",
        "column": 1,
        "columnSpan": 1,
        "id": "2",
        "justifySelf": "auto",
        "position": "auto",
        "row": 1,
        "rowSpan": 1,
        "shapes": [],
      },
      {
        "alignSelf": "auto",
        "column": 1,
        "columnSpan": 1,
        "id": "2",
        "justifySelf": "auto",
        "position": "auto",
        "row": 2,
        "rowSpan": 1,
        "shapes": [],
      },
      {
        "alignSelf": "auto",
        "column": 2,
        "columnSpan": 1,
        "id": "2",
        "justifySelf": "auto",
        "position": "auto",
        "row": 1,
        "rowSpan": 1,
        "shapes": [],
      },
      {
        "alignSelf": "auto",
        "column": 2,
        "columnSpan": 1,
        "id": "2",
        "justifySelf": "auto",
        "position": "auto",
        "row": 2,
        "rowSpan": 1,
        "shapes": [],
      },
    ],
    "layoutGridColumns": [
      {
        "type": "flex",
        "value": 1,
      },
      {
        "type": "flex",
        "value": 1,
      },
    ],
    "layoutGridDir": "row",
    "layoutGridRows": [
      {
        "type": "flex",
        "value": 1,
      },
      {
        "type": "flex",
        "value": 1,
      },
    ],
    "layoutJustifyContent": "space-between",
    "layoutJustifyItems": "start",
    "layoutPadding": {
      "p1": 5,
      "p2": 5,
      "p3": 5,
      "p4": 5,
    },
    "layoutPaddingType": "simple",
    "name": "Board",
    "parentId": "1",
    "points": [
      {
        "x": 684,
        "y": 540,
      },
      {
        "x": 784,
        "y": 540,
      },
      {
        "x": 784,
        "y": 640,
      },
      {
        "x": 684,
        "y": 640,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "selrect": {
      "height": 100,
      "width": 100,
      "x": 684,
      "x1": 684,
      "x2": 784,
      "y": 540,
      "y1": 540,
      "y2": 640,
    },
    "shapes": [],
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "frame",
    "width": 100,
    "x": 684,
    "y": 540,
  },
]
`;

exports[`Plugins > group and ungroup 1`] = `
[
  {
    "fills": [
      {
        "fillColor": "#FFFFFF",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "1",
    "height": 0.01,
    "hideFillOnExport": false,
    "id": "1",
    "name": "Root Frame",
    "parentId": "1",
    "points": [
      {
        "x": 0,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0.01,
      },
      {
        "x": 0,
        "y": 0.01,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "selrect": {
      "height": 0.01,
      "width": 0.01,
      "x": 0,
      "x1": 0,
      "x2": 0.01,
      "y": 0,
      "y1": 0,
      "y2": 0.01,
    },
    "shapes": [
      "4",
    ],
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "frame",
    "width": 0.01,
    "x": 0,
    "y": 0,
  },
  {
    "fills": [
      {
        "fillColor": "#B1B2B5",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "1",
    "height": 100,
    "id": "2",
    "name": "Rectangle",
    "parentId": "4",
    "points": [
      {
        "x": 684,
        "y": 540,
      },
      {
        "x": 784,
        "y": 540,
      },
      {
        "x": 784,
        "y": 640,
      },
      {
        "x": 684,
        "y": 640,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "rx": 0,
    "ry": 0,
    "selrect": {
      "height": 100,
      "width": 100,
      "x": 684,
      "x1": 684,
      "x2": 784,
      "y": 540,
      "y1": 540,
      "y2": 640,
    },
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "rect",
    "width": 100,
    "x": 684,
    "y": 540,
  },
  {
    "fills": [
      {
        "fillColor": "#B1B2B5",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "1",
    "height": 100,
    "id": "3",
    "name": "Rectangle",
    "parentId": "4",
    "points": [
      {
        "x": 784,
        "y": 640,
      },
      {
        "x": 884,
        "y": 640,
      },
      {
        "x": 884,
        "y": 740,
      },
      {
        "x": 784,
        "y": 740,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "rx": 0,
    "ry": 0,
    "selrect": {
      "height": 100,
      "width": 100,
      "x": 784,
      "x1": 784,
      "x2": 884,
      "y": 640,
      "y1": 640,
      "y2": 740,
    },
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "rect",
    "width": 100,
    "x": 784,
    "y": 640,
  },
  {
    "fills": [],
    "flipX": null,
    "flipY": null,
    "frameId": "1",
    "height": 200,
    "id": "4",
    "index": 2,
    "name": "Group",
    "parentId": "1",
    "points": [
      {
        "x": 684,
        "y": 540,
      },
      {
        "x": 884,
        "y": 540,
      },
      {
        "x": 884,
        "y": 740,
      },
      {
        "x": 684,
        "y": 740,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "selrect": {
      "height": 200,
      "width": 200,
      "x": 684,
      "x1": 684,
      "x2": 884,
      "y": 540,
      "y1": 540,
      "y2": 740,
    },
    "shapes": [
      "2",
      "3",
    ],
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "group",
    "width": 200,
    "x": 684,
    "y": 540,
  },
]
`;

exports[`Plugins > insert svg 1`] = `
[
  {
    "fills": [
      {
        "fillColor": "#FFFFFF",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "1",
    "height": 0.01,
    "hideFillOnExport": false,
    "id": "1",
    "name": "Root Frame",
    "parentId": "1",
    "points": [
      {
        "x": 0,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0.01,
      },
      {
        "x": 0,
        "y": 0.01,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "selrect": {
      "height": 0.01,
      "width": 0.01,
      "x": 0,
      "x1": 0,
      "x2": 0.01,
      "y": 0,
      "y1": 0,
      "y2": 0.01,
    },
    "shapes": [
      "2",
    ],
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "frame",
    "width": 0.01,
    "x": 0,
    "y": 0,
  },
  {
    "fills": [],
    "flipX": false,
    "flipY": false,
    "frameId": "1",
    "height": 130,
    "id": "2",
    "name": "Test icon",
    "parentId": "1",
    "points": [
      {
        "x": 684,
        "y": 540,
      },
      {
        "x": 984,
        "y": 540,
      },
      {
        "x": 984,
        "y": 670,
      },
      {
        "x": 684,
        "y": 670,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "selrect": {
      "height": 130,
      "width": 300,
      "x": 684,
      "x1": 684,
      "x2": 984,
      "y": 540,
      "y1": 540,
      "y2": 670,
    },
    "shapes": [
      "3",
      "4",
      "5",
    ],
    "strokes": [],
    "svgAttrs": {
      "height": "130",
      "width": "300",
    },
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "group",
    "width": 300,
    "x": 684,
    "y": 540,
  },
  {
    "fills": [],
    "flipX": null,
    "flipY": null,
    "frameId": "1",
    "height": 130,
    "hidden": true,
    "id": "3",
    "name": "base-background",
    "parentId": "2",
    "points": [
      {
        "x": 684,
        "y": 540,
      },
      {
        "x": 984,
        "y": 540,
      },
      {
        "x": 984,
        "y": 670,
      },
      {
        "x": 684,
        "y": 670,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "rx": 0,
    "ry": 0,
    "selrect": {
      "height": 130,
      "width": 300,
      "x": 684,
      "x1": 684,
      "x2": 984,
      "y": 540,
      "y1": 540,
      "y2": 670,
    },
    "strokes": [],
    "svgAttrs": {
      "fill": "none",
      "id": "base-background",
    },
    "svgDefs": {},
    "svgViewbox": {
      "height": 130,
      "width": 300,
      "x": 0,
      "x1": 0,
      "x2": 300,
      "y": 0,
      "y1": 0,
      "y2": 130,
    },
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "rect",
    "width": 300,
    "x": 684,
    "y": 540,
  },
  {
    "fills": [
      {
        "fillColor": "#0000ff",
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "1",
    "height": 100,
    "id": "4",
    "name": "svg-rect",
    "parentId": "2",
    "points": [
      {
        "x": 694,
        "y": 550,
      },
      {
        "x": 894,
        "y": 550,
      },
      {
        "x": 894,
        "y": 650,
      },
      {
        "x": 694,
        "y": 650,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "rx": 20,
    "ry": 20,
    "selrect": {
      "height": 100,
      "width": 200,
      "x": 694,
      "x1": 694,
      "x2": 894,
      "y": 550,
      "y1": 550,
      "y2": 650,
    },
    "strokes": [],
    "svgAttrs": {},
    "svgDefs": {},
    "svgViewbox": {
      "height": 100,
      "width": 200,
      "x": 10,
      "x1": 10,
      "x2": 210,
      "y": 10,
      "y1": 10,
      "y2": 110,
    },
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "rect",
    "width": 200,
    "x": 694,
    "y": 550,
  },
  {
    "content": "Sorry, your browser does not support inline SVG.",
    "fills": [],
    "flipX": null,
    "flipY": null,
    "frameId": "1",
    "height": 130,
    "id": "5",
    "name": "svg-node",
    "parentId": "2",
    "points": [
      {
        "x": 684,
        "y": 540,
      },
      {
        "x": 984,
        "y": 540,
      },
      {
        "x": 984,
        "y": 670,
      },
      {
        "x": 684,
        "y": 670,
      },
    ],
    "proportion": 2.3076923076923075,
    "proportionLock": true,
    "rotation": 0,
    "selrect": {
      "height": 130,
      "width": 300,
      "x": 684,
      "x1": 684,
      "x2": 984,
      "y": 540,
      "y1": 540,
      "y2": 670,
    },
    "strokes": [],
    "svgAttrs": {},
    "svgDefs": {},
    "svgViewbox": {
      "height": 130,
      "width": 300,
      "x": 0,
      "x1": 0,
      "x2": 300,
      "y": 0,
      "y1": 0,
      "y2": 130,
    },
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "svg-raw",
    "width": 300,
    "x": 684,
    "y": 540,
  },
]
`;

exports[`Plugins > plugin data 1`] = `
[
  {
    "fills": [
      {
        "fillColor": "#FFFFFF",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "1",
    "height": 0.01,
    "hideFillOnExport": false,
    "id": "1",
    "name": "Root Frame",
    "parentId": "1",
    "points": [
      {
        "x": 0,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0.01,
      },
      {
        "x": 0,
        "y": 0.01,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "selrect": {
      "height": 0.01,
      "width": 0.01,
      "x": 0,
      "x1": 0,
      "x2": 0.01,
      "y": 0,
      "y1": 0,
      "y2": 0.01,
    },
    "shapes": [
      "2",
    ],
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "frame",
    "width": 0.01,
    "x": 0,
    "y": 0,
  },
  {
    "fills": [
      {
        "fillColor": "#B1B2B5",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "1",
    "height": 100,
    "id": "2",
    "name": "Rectangle",
    "parentId": "1",
    "pluginData": {
      "TEST": {
        "testData": "test",
      },
    },
    "points": [
      {
        "x": 0,
        "y": 0,
      },
      {
        "x": 100,
        "y": 0,
      },
      {
        "x": 100,
        "y": 100,
      },
      {
        "x": 0,
        "y": 100,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "rx": 0,
    "ry": 0,
    "selrect": {
      "height": 100,
      "width": 100,
      "x": 0,
      "x1": 0,
      "x2": 100,
      "y": 0,
      "y1": 0,
      "y2": 100,
    },
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "rect",
    "width": 100,
    "x": 0,
    "y": 0,
  },
]
`;

exports[`Plugins > ruler guides 1`] = `
[
  {
    "fills": [
      {
        "fillColor": "#FFFFFF",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "1",
    "height": 0.01,
    "hideFillOnExport": false,
    "id": "1",
    "name": "Root Frame",
    "parentId": "1",
    "points": [
      {
        "x": 0,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0.01,
      },
      {
        "x": 0,
        "y": 0.01,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "selrect": {
      "height": 0.01,
      "width": 0.01,
      "x": 0,
      "x1": 0,
      "x2": 0.01,
      "y": 0,
      "y1": 0,
      "y2": 0.01,
    },
    "shapes": [],
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "frame",
    "width": 0.01,
    "x": 0,
    "y": 0,
  },
]
`;

exports[`Plugins > text and textrange 1`] = `
[
  {
    "fills": [
      {
        "fillColor": "#FFFFFF",
        "fillOpacity": 1,
      },
    ],
    "flipX": null,
    "flipY": null,
    "frameId": "1",
    "height": 0.01,
    "hideFillOnExport": false,
    "id": "1",
    "name": "Root Frame",
    "parentId": "1",
    "points": [
      {
        "x": 0,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0,
      },
      {
        "x": 0.01,
        "y": 0.01,
      },
      {
        "x": 0,
        "y": 0.01,
      },
    ],
    "proportion": 1,
    "proportionLock": false,
    "rotation": 0,
    "selrect": {
      "height": 0.01,
      "width": 0.01,
      "x": 0,
      "x1": 0,
      "x2": 0.01,
      "y": 0,
      "y1": 0,
      "y2": 0.01,
    },
    "shapes": [
      "2",
    ],
    "strokes": [],
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "frame",
    "width": 0.01,
    "x": 0,
    "y": 0,
  },
  {
    "content": {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "fills": [
                    {
                      "fillColor": "#ff6fe0",
                      "fillOpacity": 1,
                    },
                  ],
                  "fontFamily": "Work Sans",
                  "fontId": "gfont-work-sans",
                  "fontSize": "40",
                  "fontStyle": "italic",
                  "fontVariantId": "500italic",
                  "fontWeight": "500",
                  "letterSpacing": "0",
                  "lineHeight": "1.2",
                  "text": "Hello",
                  "textAlign": "left",
                  "textDecoration": "underline",
                  "textTransform": "uppercase",
                  "typographyRefFile": null,
                  "typographyRefId": null,
                },
                {
                  "fills": [
                    {
                      "fillColor": "#000000",
                      "fillOpacity": 1,
                    },
                  ],
                  "fontFamily": "Work Sans",
                  "fontId": "gfont-work-sans",
                  "fontSize": "20",
                  "fontStyle": "italic",
                  "fontVariantId": "500italic",
                  "fontWeight": "500",
                  "letterSpacing": "0",
                  "lineHeight": "1.2",
                  "text": " World!",
                  "textAlign": "left",
                  "textDecoration": "underline",
                  "textTransform": "uppercase",
                  "typographyRefFile": null,
                  "typographyRefId": null,
                },
              ],
              "fills": [
                {
                  "fillColor": "#000000",
                  "fillOpacity": 1,
                },
              ],
              "fontFamily": "Work Sans",
              "fontId": "gfont-work-sans",
              "fontSize": "20",
              "fontStyle": "italic",
              "fontVariantId": "500italic",
              "fontWeight": "500",
              "letterSpacing": "0",
              "lineHeight": "1.2",
              "textAlign": "left",
              "textDecoration": "underline",
              "textTransform": "uppercase",
              "type": "paragraph",
              "typographyRefFile": null,
              "typographyRefId": null,
            },
          ],
          "type": "paragraph-set",
        },
      ],
      "type": "root",
    },
    "flipX": null,
    "flipY": null,
    "frameId": "1",
    "growType": "auto-width",
    "height": 48,
    "id": "2",
    "name": "Text",
    "parentId": "1",
    "points": [
      {
        "x": 684,
        "y": 540,
      },
      {
        "x": 898,
        "y": 540,
      },
      {
        "x": 898,
        "y": 588,
      },
      {
        "x": 684,
        "y": 588,
      },
    ],
    "positionData": [
      {
        "direction": "ltr",
        "fills": [
          {
            "fillColor": "#ff6fe0",
            "fillOpacity": 1,
          },
        ],
        "fontFamily": ""Work Sans"",
        "fontSize": "40px",
        "fontStyle": "italic",
        "fontWeight": "500",
        "height": 47,
        "letterSpacing": "normal",
        "text": "Hello",
        "textDecoration": "underline solid rgb(255, 111, 224)",
        "textTransform": "uppercase",
        "width": 129.03125,
        "x": 684,
        "x1": 0,
        "x2": 129.03125,
        "y": 587,
        "y1": 0,
        "y2": 47,
      },
      {
        "direction": "ltr",
        "fills": [
          {
            "fillColor": "#000000",
            "fillOpacity": 1,
          },
        ],
        "fontFamily": ""Work Sans"",
        "fontSize": "20px",
        "fontStyle": "italic",
        "fontWeight": "500",
        "height": 24,
        "letterSpacing": "normal",
        "text": " World!",
        "textDecoration": "underline solid rgb(0, 0, 0)",
        "textTransform": "uppercase",
        "width": 84.375,
        "x": 813.03125,
        "x1": 129.03125,
        "x2": 213.40625,
        "y": 582,
        "y1": 18,
        "y2": 42,
      },
    ],
    "rotation": 0,
    "selrect": {
      "height": 48,
      "width": 214,
      "x": 684,
      "x1": 684,
      "x2": 898,
      "y": 540,
      "y1": 540,
      "y2": 588,
    },
    "transform": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transformInverse": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "text",
    "width": 214,
    "x": 684,
    "y": 540,
  },
]
`;
